--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.11",
+    "three": "^0.178.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
@@ -31,6 +32,7 @@
     "@angular/cli": "^17.2.3",
     "@angular/compiler-cli": "^17.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/three": "^0.178.1",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
